# ChangeLog for sys-cluster/corosync
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/corosync/ChangeLog,v 1.29 2013/08/29 10:30:17 ultrabug Exp $

*corosync-2.3.1 (29 Aug 2013)

  29 Aug 2013; Ultrabug <ultrabug@gentoo.org> -corosync-2.3.0-r1.ebuild,
  +corosync-2.3.1.ebuild:
  version bump, drop old

*corosync-2.3.0-r1 (17 May 2013)

  17 May 2013; Ultrabug <ultrabug@gentoo.org> -corosync-2.3.0.ebuild,
  +corosync-2.3.0-r1.ebuild:
  fix libqb dep #468982 thx to Walter

  01 Feb 2013; Agostino Sarubbo <ago@gentoo.org> -corosync-2.1.0.ebuild:
  Remove old

*corosync-2.3.0 (18 Jan 2013)
*corosync-1.4.5 (18 Jan 2013)

  18 Jan 2013; Ultrabug <ultrabug@gentoo.org> corosync-1.4.4.ebuild,
  +corosync-1.4.5.ebuild, +corosync-2.3.0.ebuild:
  Version bump, fix #451182

*corosync-1.4.4 (29 Oct 2012)

  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> +corosync-1.4.4.ebuild:
  Version bump of corosync-1 series

*corosync-2.1.0 (29 Oct 2012)

  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> -corosync-2.0.0.ebuild,
  files/corosync-2.0.0-docs.patch, -files/corosync-2.0.0-rpath.patch,
  +corosync-2.1.0.ebuild:
  Bump corosync-2 series for testing, drop the old one

*corosync-1.4.3-r1 (11 Jul 2012)

  11 Jul 2012; Ultrabug <ultrabug@gentoo.org> -corosync-1.4.3.ebuild,
  +corosync-1.4.3-r1.ebuild:
  Remove non-Gentoo init script, fix #425718.

*corosync-2.0.0 (16 May 2012)

  16 May 2012; Ultrabug <ultrabug@gentoo.org> +corosync-2.0.0.ebuild,
  +files/corosync-2.0.0-docs.patch, +files/corosync-2.0.0-rpath.patch:
  Bump to corosync-2 branch, ebuild masked in profiles/package.mask for testing

*corosync-1.4.3 (16 May 2012)
*corosync-1.3.5 (16 May 2012)

  16 May 2012; Ultrabug <ultrabug@gentoo.org> -corosync-1.3.1.ebuild,
  -corosync-1.3.3.ebuild, +corosync-1.3.5.ebuild, +corosync-1.4.3.ebuild:
  Version bump, drop old, fix #412787.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> corosync-1.3.0.ebuild,