@@ -12,6 +12,7 @@ DIST corosync-1.4.3.tar.gz 729503 SHA256 c88fbfc14cd0ff8fba24833fa43b54cf8380fbd
 DIST corosync-1.4.4.tar.gz 735289 SHA256 d2b5562afa6d45e470c7cc781924c462b1d14f9d5b7998f8eca77a9fd4f24b38 SHA512 dd556e274ca791e8ae4d1b5d91b2c42b5b041a8126f455e1dddc7102a4b91f5656b31beaf04195f5bddad39efc59fcdde2f058a756bd7756f26fc5402f5891ef WHIRLPOOL ce0ccdd73fad07f5f5a199001c0c0a81725565ea652a15bae409e2de6cc1c9f18cbf1cbf4e7b9a095fb0ee154b263740af3d779e03f643be3c91631bb76be345
 DIST corosync-1.4.5.tar.gz 416607 SHA256 e4e50f54bcd48d5bd288b33c135451c66f338e5d43b1e80965e3b1509cc2a977 SHA512 899518f976100c027fac24ec20f097c4aa6c65e3531bf385903557d8e7bcf74de69224f109e5f2a87ed810f0a1a7572cb64940e8d85ced31cb0d66ca666f58cb WHIRLPOOL aa8f77fc36696364cf29a467f961a788975b41e8cea6e715dd0c09691dba8a5b8fb2c08d1db3ea09f7f65a102bc491369eb02731fda6424bee68c947101e5fe9
 DIST corosync-2.3.1.tar.gz 402065 SHA256 3f5689d2d44cdf9aa3483f3c33cbc1dbe11e439fd08415bab419b8cd12aa57b7 SHA512 76cda574c622283cceb89609c17ee2e3cd4ff9a257c3d650df60d5041b5ed9b63ab45b5700ab41f7842c6885ee3881f358a7829a3f418d3a2a60b43f3c48a710 WHIRLPOOL e31b98fe3e73c50b73b338a1de993b34459d03badae00dd0aef8ff2c3dad790067aa7dc7fdcb3a8314dd3c4d0c9df5459ffecee5b84a91e68a563fbaca24dddc
+DIST corosync-2.3.2.tar.gz 408032 SHA256 f1969ed696246a52e16bcec7a73b776e31c72eb211d811b42b516875288bf1ca SHA512 5239d2665e500e570f0dd7b1af32c1a1373be49689c284a93e5804aee44f95df94107804e110b6492243bfe87a3b33aa90f24f9ba1411316829de46ebe60905f WHIRLPOOL a12abb6c5da250c15ece8c60d39123f1a3261bc5403d4a78cf917724f2ac8beab52339d715708a7142ee9624f5ff859ab97db71960e69e487076fefb1ad81c0e
 EBUILD corosync-1.3.0.ebuild 1338 SHA256 bf11adc6b068aa96e98c3d101f72f0e8f3eae32fe815387dbfbca87422648b7f SHA512 4774079348070c284ce8e5d7ce554522dfc52929c562cc78f9911db1b110a6c45e7fec16339821958a4b511d8fa42f8e9e7181ac853042e4705d10f57e5d1e77 WHIRLPOOL 1f2e490e70cb6b7a4317f9ff131972c998b4614151b134420dcf1b411a50e415a547aaddca827a07d79f3056c526dc993c0c807d2da32aeba8ca67e1374e8477
 EBUILD corosync-1.3.3-r1.ebuild 1416 SHA256 a57de5834103a358677080d126f0b9db339f563bd07e2c4e82618dc0ea66e990 SHA512 94a7378f61dc443d9ab0181542ef9f04d73698d81d447adbd2048cdbe26b08155c02e1417f328b141fde8fedfa259a9291e91559844776d34c2129c0023d54cc WHIRLPOOL 3c27af61447b0e33b1420950026bcd1d6d24c204b8540e46417f5f1236dd56f8d2819f83db07989c5111e4f2f06e95375d2b15e111d2154c0dc595f93d376909
 EBUILD corosync-1.3.5.ebuild 1415 SHA256 25c6f8f04565027c60dc013157b4c63912c2f5f4fd34395db13dbbcee01974f4 SHA512 3ca0dfd2b1539f0b4da20835a53ee7caf890e7c189628e80af5f7a5fad0e3e9a8ac740411c0a28dc0d47c2e86fc5df98a3021bbbd2b31a8770d9a19b34e66998 WHIRLPOOL cb01b56596dc34ce9c9b9f6e47dd3a9e1e5cba756a19591537c3cd67ad3560a26b21acc3259d56b75707b9f6472d0922708538938dbc164192d184f9573d0853
@@ -19,12 +20,13 @@ EBUILD corosync-1.4.3-r1.ebuild 1464 SHA256 b38b71ca5b710a0c2f82541f60cbaee58e95
 EBUILD corosync-1.4.4.ebuild 1450 SHA256 6b062315da91d7f9300dc2903e1e13164f94458c076a38f796abdd404e049fc8 SHA512 f595515195475f86dcd084746e4d77efeba9132817769333b0beae035a0f884eea07a54506e5f190eed8127a2dd0813b6fc11a9a3441038ce1c792536058afcc WHIRLPOOL c3dd5d7eb64caa1b2277d1039fc845e7b972d7d40d8c65a4eaf48676be84d9104ce2f219f2fc61438b765475f5e0833c12c0bbf8f6469cb4a13c4d3b6b5777e2
 EBUILD corosync-1.4.5.ebuild 1529 SHA256 e7c75d2404fc50dc2d625d74178aa6d9c60760ed3ae7cb719caa9dc0673d96b2 SHA512 7142e05f1b9e2593f93623bb16884029f93b23526b8000d9438e983da83417e37075d741892177e5e156d10b4b8a7b372da1b1c94f882597f866942e5213ae6a WHIRLPOOL 1dc17dd640e0a2f011b993c47d1672533ffb3aec610e07ba854060b8c18056d3af083c4093542a41f6ef3788d39dc130a0bf137d99a2965d354f3549237f01f7
 EBUILD corosync-2.3.1.ebuild 1774 SHA256 c18e36368be16f953b4b5f9ad613fbadd613f1d2ed6af358e51997a17fe35b9e SHA512 b916efba8e491276df5a6f6128e266208044e783c92762e0a51c32735b5268c197b4db42522dc0b2f220f4b4e939b6a50da7a00d944c95474cab6e9c1ea4b6ca WHIRLPOOL e3936097ff7a64401ecaa402d0397595c514b1b3d0330353d30b1dc37a5be295055d0f418e7710cf2b2a9d3214fdb7f49059891e6e8b029067c2165c6ebf29b7
-MISC ChangeLog 4951 SHA256 a0d40a3e6797d2a11e589106179bfbfe740546804d145ea7967e05fa46937eb1 SHA512 61f19546d5a4ebcdec7b4e4a2e88a6073d25c8dfd6a8bb03aff538ee4b9e3dd785b8cb39e6dda36bdfca7790b7901194a9df06eaf8234ef92cf0e8f7c3c8e2c2 WHIRLPOOL 917ee711353e6ee13405f39114ff29d515de81d275f264b58f79ae5419f50a2192b8c0eab9eae01da1265a1524e4a32eb5c22381bbdd290dd3a06b88ee7758ce
+EBUILD corosync-2.3.2.ebuild 1774 SHA256 4b99971f43dc1b5f58306830075bd3d50f9a4337cc0adbc2321474d25805e6e6 SHA512 17f2374e1a5c6c28c2da0311d1a3d8a62004fba62c6d82d5b8c20c17b3ff562460eccde6675453eb7fe2d27c8135d4651cebf1dcfbe5373ad74b03ce04e9b898 WHIRLPOOL 7466f18c5cad99fbb755f05263bc91abae60427e3fd8bae76c06d7e6336e066a707895d9325ea21dab9f4490dfe6622b3b2a8afe272705d0b73b1bceab8d5786
+MISC ChangeLog 5068 SHA256 11c4b9dbb1d5d1bc5562b0301d6b759528faf01d583a798572cc1e8f3cd41230 SHA512 f7fc976dccdd1b54919bd28ca793be61d0517fb9e91fc10bb2abbb2a2ce1401d5aab74e1dd873e99ec10c857b14bc6bfdadfbf4a0f458023b7672f3197737d67 WHIRLPOOL 8161b8da1c454cb55df0142ecc5021ac9ddceef2870cdd362921f6d6f97904e2660a45e86351e775cfd0a5c8629cf6afb2d2d40a25064e49b34133209ddc9168
 MISC metadata.xml 439 SHA256 c42c0a4842cfe519184bc5f0ed1a67e0d08957add7f680a3112c17d6f7aabb14 SHA512 9840d4948e84c3a98a7dafe2909648a529d735f3a9297912e4c044439035ff8ed4be3848787f41d5a868e94a9c6137ab6efaf38a84c7373084ba76ec1272b5a5 WHIRLPOOL 2940d8c05e9b0ade0ea3d00e17fd632998f0d46274864c140de8dd49ff25a5fa0bafb3fb54427be9ff366546a82a69e2905e5587655e97d05b9aaac76ad9af04
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlIfIr8ACgkQKiQSS7ZY+hMPowD/TfVbHBZ6bRl5QtZGDtgG/4An
-XyUzzaTSUgOtrKCakAEBAMwRqQGeYuU5XyBx+3wBi9y3mNq8LP8MYVkjHPANvarQ
-=5eG4
+iF4EAREIAAYFAlJf2pcACgkQKiQSS7ZY+hNtqgD+P/NSSwsVtu7DYJpVTKec5eNY
+JmpNnNPj7TEfhd5JyyEA/1R9NH7tS7rfS/NKDoNGiItGk8KqdADNbuYeOyoiU8+s
+=v1/d
 -----END PGP SIGNATURE-----
