@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/corosync
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/corosync/ChangeLog,v 1.29 2013/08/29 10:30:17 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/corosync/ChangeLog,v 1.30 2013/10/17 12:39:46 ultrabug Exp $
+
+*corosync-2.3.2 (17 Oct 2013)
+
+  17 Oct 2013; Ultrabug <ultrabug@gentoo.org> +corosync-2.3.2.ebuild:
+  version bump
 
 *corosync-2.3.1 (29 Aug 2013)
 
